--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typecheck:server": "npm run typecheck --prefix server"
   },
   "devDependencies": {
+    "@playwright/test": "^1.37.0",
     "@stylelint/postcss-css-in-js": "^0.38.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
