--- a/server/package.json
+++ b/server/package.json
@@ -35,7 +35,9 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.21.0",
     "firebase-admin": "^11.10.1",
+    "langchain": "^0.0.142",
     "newsapi": "^2.4.1",
+    "openai": "^4.4.0",
     "playwright": "^1.37.1",
     "zod": "^3.22.2"
   },
